@@ -83,6 +83,7 @@ This reduces the time required to build SysON, especially when using Spring Tool
 - https://github.com/eclipse-syson/syson/issues/803[#803] [libraries] All standard libraries have been updated to comply with the SysML Beta 2.2 specification.
 - https://github.com/eclipse-syson/syson/issues/805[#805] [import] Improve non regression tests.
 Added source sysml file and unaltered ast.json result.
+- https://github.com/eclipse-syson/syson/issues/812[#812] [export] Fix visibility issue when resolving name of privately imported element during export.
 
 === New features
 
